Bug 1672856 - Don't crash when printing with selections pointing to detached nodes. r=jfkthame

In some edge cases involving shadow dom the selection code may get
confused and keep references to inside the shadow root (of <audio> in
this case).

Avoid crashing due to that in the printing code for now, bug.

Bug 1590379 tracks issues with selection handling inside shadow DOM.

Differential Revision: https://phabricator.services.mozilla.com/D94578